--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -97,9 +97,9 @@
                         <h4 class="mb-3 jamsil">가상 피팅</h4>
                         <p class="mb-4 jamsil">옷을 실제로 입지 않고도 가상에서<br>먼저 확인해 볼 수 있습니다!</p>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' user.first_name %}">더보기</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'virtual_fit' user.first_name %}">더보기</a>
                         {% else %}
-                        {% comment %} # <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' " " %}">로그인 하기</a> {% endcomment %}
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'virtual_fit' " " %}">로그인 하기</a>
                         {% endif %}
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         {% if user.is_authenticated %}
                         <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' user.first_name %}">더보기</a>
                         {% else %}
-                        {% comment %} <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' " " %}">로그인 하기</a> {% endcomment %}
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' " " %}">로그인 하기</a>
                         {% endif %}
                     </div>
                 </div>
