👌 IMPROVE: 그룹별 이미지 출력

--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -105,7 +105,7 @@
                                     <label for="details" class="col-sm-2 col-form-label text-end fw-bold" >상세정보</label>
                                     <textarea name="details" id="details" class="form-control col details" rows="5" placeholder="생략 가능"></textarea>
                                 </div>
-                                <input id="groupID" type="text"></input>
+                                <input hidden id="groupID" type="text"></input>
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
                                     <label class="col-sm-2"></label>
