카카오 로그인 및 스타일 설문조사 추가

--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -789,6 +789,16 @@
         </div>
     </div> {% endcomment %}
     <!-- Blog End -->
+    <!-- 회원가입 메시지 -->
+{% if messages %}
+{% for message in messages %}
+{% if message.tags == 'success' %}
+<script>
+    alert('{{ message }}');
+</script>
+{% endif %}
+{% endfor %}
+{% endif %}
 {% endblock %}
 
 
