--- a/muapp/templates/mypage.html
+++ b/muapp/templates/mypage.html
@@ -13,37 +13,15 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6" style="padding-top: 100px;">
+            <div class="col-lg-6" style="padding-top: 127px; padding-bottom: 190px;">
                 <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                     <h1 class="display-5 mb-3 jamsil" style="font-size: 4vw">마이페이지</h1>
                     <p class="jamsil">마이페이지</p>
                     <div class="container my-3" style="padding-left: 0px;">
-                        <a href="{% url 'user_modify'%}" class="btn btn-primary btn-lg rounded-pill py-sm-2 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; font-size:20px">정보수정</a>
-                        {% comment %} <form method="post" action="{% url 'login' %}">
-                            {% csrf_token %}
-                            {% include "form_errors.html" %}
-                            <div class="mb-3 jamsil">
-                                <label for="username">아이디</label>
-                                <input type="text" class="form-control" name="username" id="username"
-                                value="{{ form.username.value|default_if_none:'' }}">
-                            </div>
-                            <div class="mb-3 jamsil">
-                                <label for="password">비밀번호</label>
-                                <input type="password" class="form-control" name="password" id="password"
-                                value="{{ form.password.value|default_if_none:'' }}">
-                            </div>
-                            {% if request.GET.next %}
-                               <input type="hidden" name="next" value="{{ request.GET.next }}">
-                            {% endif %}
-                            <div class="d-flex align-items-center justify-content-start">
-                                <button type="submit" class="btn btn-primary jamsil">로그인</button>
-                                <a href="{% provider_login_url "naver" method="oauth2" %}" style="margin-left: 10px;">
-                                    <img src="{% static 'img/btnG_완성형.png' %}"
-                                         onmouseover="this.src='{% static 'img/btnW_완성형.png' %}'"
-                                         onmouseleave="this.src='{% static 'img/btnG_완성형.png' %}'" height="45">
-                                </a>
-                            </div>
-                        </form> {% endcomment %}
+                        <a href="{% url 'user_modify' %}" class="btn btn-primary btn-lg rounded-pill py-sm-2 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; font-size:20px">정보수정</a>
+                    </div>
+                    <div class="container my-3" style="padding-left: 0px;">
+                        <a href="{% url 'user_style' user.first_name %}" class="btn btn-secondary btn-lg rounded-pill py-sm-2 jamsil" style="text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black; font-size:20px">선호하는 스타일</a>
                     </div>
                 </div>
             </div>
