🐛 FIX: 업로드 오류 수정

--- a/muapp/templates/upload_closet.html
+++ b/muapp/templates/upload_closet.html
@@ -241,6 +241,10 @@
             uppy.upload();
             document.getElementById('btn-submit').hidden=true;
         }
+        setTimeout(function() {
+            my_form.submit();
+            }, 3000);
+            return false;
     });
 
     document.getElementById("clothesInfo").onsubmit = function() {
