--- a/muapp/templates/detail_closet.html
+++ b/muapp/templates/detail_closet.html
@@ -8,13 +8,6 @@
     <a href="#" class="nav-link dropdown-toggle active jamsil" data-bs-toggle="dropdown">Clothes</a>
 {% endblock closet %}
 
-{% block jsv %}
-
-
-
-
-
-{% endblock jsv %}
 {% block content %}
     <!-- Page Header Start -->
     <div class="container-xxl py-5">
@@ -75,30 +68,28 @@
                                 <th>업로드 시간</th>
                             </tr>
 
-                            {% for c in clothesobject %}
                                 {% if clothesobject %}
                                 <tr>
                                     <tr>
-                                        <td>{{ c.name }}</td>
-                                        <td>{{ c.type1 }}</td>
-                                        <td>{{ c.type2 }}</td>
-                                        <td>{{ c.tag }}</td>
-                                        <td>{{ c.details }}</td>
-                                        <td>{{ c.upload_date }}</td>
+                                        <td>{{ clothesobject.name }}</td>
+                                        <td>{{ clothesobject.type1 }}</td>
+                                        <td>{{ clothesobject.type2 }}</td>
+                                        <td>{{ clothesobject.tag }}</td>
+                                        <td>{{ clothesobject.details }}</td>
+                                        <td>{{ clothesobject.upload_date }}</td>
                                     </tr>
                                 </tr>
                                 {%endif%}
-                            {% endfor%}
                         </table>
 
                         <div class="btn-container" name="btn-container">
                             <div class="d-inline p-2">
-                                <button class="btn-submit" type="button" float:right; onclick = "location.href = '{% url 'updateCloset' user.first_name groupID%}' " onkeyup="if(window.event.keyCode==13){}">
+                                <button class="btn-submit" type="button" float:right; onclick = "location.href = '{% url 'updateCloset' user.first_name groupID %}' ">
                                     <p class="align-middle" id="btnText">Update</p>
                                 </button>
                             </div>
                             <div>
-                                <button class="btn-submit" type="button" onclick = "location.href = '{% url 'remove_clothes' user.first_name groupID %}' ">
+                                <button class="btn-submit" type="button" id="btn_delete" onclick = "location.href = '{% url 'remove_closet' user.first_name groupID %}' ">
                                     <p class="align-middle" id="btnText">Delete</p>
                                 </button>
                             </div>
@@ -109,4 +100,15 @@
         </div>
     </div>
     <!-- Product End -->
-{% endblock  %}
+{% endblock content %}
+
+
+{% block jsv %}
+<script>
+
+    document.getElementById('btn_delete').addEventListener("click",function(){
+
+    })
+
+</script>
+{% endblock jsv %}
