--- a/muapp/templates/view_closet.html
+++ b/muapp/templates/view_closet.html
@@ -16,6 +16,10 @@
 {% endblock closet %}
 
 {% block content %}
+
+
+
+
     <!-- Page Header Start -->
     <div class="container-xxl py-5">
         <!-- Page Header Start -->
@@ -30,6 +34,18 @@
     </div>
     <!-- Page Header End -->
 
+    <!-- Message Start-->
+    {% if messages %}
+        <br>
+        <div class="messages">
+        {% for message in messages %}
+            <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+            {{ message.message }}
+            </div>
+        {% endfor %}
+        </div>
+    {% endif %} 
+    <!-- Message End-->
 
     <!-- Product Start -->
     <div class="container-xxl py-5">
