--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -24,105 +24,46 @@
 
 
     <!-- Blog Start -->
-    <div class="container-xxl py-6">
+    <div class="container-xxl py-6" style="padding-bottom: 20px; padding-top: 60px;">
         <div class="container jamsil">
-            <div class="section-header text-center mx-auto mb-5 wow fadeInUp jamsil" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-5 mb-3 jamsil">코디 북</h1>
-                <p>관심있는 코디들을 확인해 보세요!</p>
+            <div class="section-header text-center mx-auto wow fadeInUp jamsil" data-wow-delay="0.1s" style="max-width: 500px; margin-bottom: 30px;">
+                <h1 class="display-5 mb-3 jamsil">코디 북</h1>       
+                <p>관심있는 스타일의 코디들을 확인해 보세요!</p>
             </div>
             <div class="row g-4">
+                {% for mu in musinsa %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
+                    <div class="p-4" style="background-color: #F5F5F5;">  
+                        <a class="d-block h5 lh-base mb-4 jamsil text-center border-bottom pb-3" style="color: black; text-shadow: -1px 0px white, 0px 1px white, 1px 0px white, 0px -1px white; font-size: 25px;" href="{{mu.item_page}}">{{mu.item_title}}</a>
+                        <a class="d-block h5 lh-base mb-4 jamsil text-center" target="_blank" title="{{mu.item_title}}" href="{{mu.item_page}}">
+                            <img src="{{ mu.item_picture }}" class="img-fluid pt-4" alt="{{mu.item_title}}"></a>
+                        <div class="text-muted border-top pt-4 d-flex justify-content-between">
+                            <small><i class="fa fa-user text-primary me-2 jamsil"></i>{{mu.item_model}}</small>
+                            <small><i class="fa fas fa-clone text-primary me-2"></i>{{mu.item_text}}</small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
+                {% endfor %}
+                <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 40px; margin-bottom: 10px;">
+                    {% if musinsa.has_other_pages %}
+                    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
+                        {% if musinsa.has_previous %}
+                        <a class="btn btn-primary rounded-pill px-3" href="?page=1">처음</a>
+                        <a class="btn btn-primary rounded-pill px-3" href="?page={{ musinsa.previous_page_number }}">이전</a>
+                        {% endif %}
+                        {% for i in musinsa.paginator.page_range %}
+                        {% if musinsa.number == i %}
+                        <a class="btn btn-primary rounded-pill px-5 active" href="#">{{ i }}</a>
+                        {% elif i > musinsa.number|add:'-3' and i < musinsa.number|add:'3' %}
+                        <a class="btn btn-primary rounded-pill px-3" href="?page={{ i }}">{{ i }}</a>
+                        {% endif %}
+                        {% endfor %}
+                        {% if musinsa.has_next %}
+                        <a class="btn btn-primary rounded-pill px-3" href="?page={{ musinsa.next_page_number }}">다음</a>
+                        <a class="btn btn-primary rounded-pill px-2" href="?page={{ musinsa.paginator.num_pages }}">마지막</a>
+                        {% endif %}
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                    <div class="bg-light p-4">
-                        <a class="d-block h5 lh-base mb-4" href="">How to cultivate organic fruits and vegetables in own firm</a>
-                        <div class="text-muted border-top pt-4">
-                            <small class="me-3"><i class="fa fa-user text-primary me-2"></i>Admin</small>
-                            <small class="me-3"><i class="fa fa-calendar text-primary me-2"></i>01 Jan, 2045</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="">Load More</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
