👌 IMPROVE: update 기능 추가

--- a/muapp/templates/update_closet.html
+++ b/muapp/templates/update_closet.html
@@ -62,14 +62,14 @@
                                     <label for="type1" class="col-sm-2 col-form-label text-end fw-bold">분류 1</label>
                                     <select name="type1" id="type1" size="1" class="form-select col" required>
                                         <option value="none" disabled>=== 분류 1 ===</option>
-                                        <option value="top">상의</option>
-                                        <option value="pants">바지</option>
-                                        <option value="skirt">치마</option>
-                                        <option value="dress">원피스</option>
-                                        <option value="outer">아우터</option>
-                                        <option value="bag">가방</option>
-                                        <option value="accessary">악세서리</option>
-                                        <option value="shoes">신발</option>
+                                        <option>상의</option>
+                                        <option>바지</option>
+                                        <option>치마</option>
+                                        <option>원피스</option>
+                                        <option>아우터</option>
+                                        <option>가방</option>
+                                        <option>악세서리</option>
+                                        <option>신발</option>
                                     </select>
                                 </div>
                                 <div class="mb-3 row">
@@ -96,7 +96,7 @@
                                     </div>
                                 </div>
                                 <!--tag 추가해서 띄우는 label-->
-                                <div class="mb-3 row" style="display:none">
+                                <div class="mb-3 row" >
                                     <label class="col-sm-2 col-form-label text-end"></label>
                                     <input type="text" name="tags" id="tags" class="form-control col" value="{{clothesobject.tag}}" readonly/>
                                 </div>
@@ -104,7 +104,22 @@
                                     <label for="details" class="col-sm-2 col-form-label text-end fw-bold" >상세정보</label>
                                     <textarea name="details" id="details" class="form-control col details" rows="5" placeholder="생략 가능" >{{clothesobject.details}}</textarea>
                                 </div>
-                                <input hidden id="groupID" type="text"></input>
+                                <!-- hidden  -->
+                                <input hidden id="groupID" type="text" value="{{clothesobject.groupID}}"></input>
+                                <div class="mb-3 row">
+                                    <label for="details" class="col-sm-2 col-form-label text-end fw-bold" >업로드 사진</label>
+                                    <div class="container col">
+                                        <div class="row row-cols-4">
+                                            {% for p in photosobject %}
+                                                <div class="col">
+                                                    <img class="img-fluid w-100" src="{{p.imgfile.url}}" width="200px" height="300px" margin="10%" padding="10%" alt="">
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <br>
                                 <!-- Uppy Dashboard -->
                                 <div class="mb-3 row">
                                     <label class="col-sm-2"></label>
@@ -211,23 +226,7 @@
         })
         .use(Uppy.Webcam, { target: Uppy.Dashboard })
         */
-
-    {% if photosobject %}
-        {% for photo in photosobject %}
-            console.log("{{photo.imgfile.url}}");
-            uppy.getPlugin('Url').addFile('{{photo.imgfile.url}}') 
-            {% comment %} uppy.addFile({
-                name: '{{photo.imgfile.name}}', // file name
-                type: 'image/jpeg', // file type
-                data: {{[photo.imgfile]}}, // file blob
-                source: 'Local', // optional, determines the source of the file, for example, Instagram.
-                isRemote: false, // optional, set to true if actual file is not in the browser, but on some remote server, for example,
-                // when using companion in combination with Instagram.
-            }); {% endcomment %}
-        {% endfor %}    
-    {% endif %}
-
-    // uppy.onBeforeFileAdded(file);
+  
 
     uppy.upload().then((result) => {
         console.info('Successful uploads:', result.successful);
@@ -246,54 +245,62 @@
         }
     });
     
-document.getElementById('btn-submit').addEventListener('click', () => {
-    validationData();
-    
-    if(validationData_value){
-        uppy.upload();
-        document.getElementById('btn-submit').hidden=true;
-    }
-    setTimeout(function() {
-        my_form.submit();
-        }, 3000);
-        return false;
-});
-
-document.getElementById("clothesInfo").onsubmit = function() {
-    return false;
-}
-
-// ===== form 유효성 테스트 =====
-var validationData_value = false;
-var submitform = document.getElementById("clothesInfo"); // form을 sumitform 변수에 저장
-
-function validationData(){
-    const files = uppy.getFiles();
-    if($('#type1').val() == "" || $('#type1').val() == "none" || $('#type1').val() == null){ // input form이 비어있으면
-        alert("분류1을 선택하지 않았습니다."); 
-        validationData_value= false;
-    }else if($('#type2').val() == "" || $('#type2').val() == "none" || $('#type2').val() == null){ // input form이 비어있으면
-        alert("분류2을 선택하지 않았습니다."); 
-        validationData_value= false;
-    }else if($('#clothesName').val() == "" || $('#clothesName').val() == "none" || $('#clothesName').val() == null){ // input form이 비어있으면
-        alert("이름을 입력하지 않았습니다."); 
-        validationData_value= false;
-    }else if(files == "" || files == null){ // 사진이 없으면
-        alert("이미지가 없습니다."); 
-        validationData_value= false;
-    }else if(files != ""){ // 사진이 있으면?
-        alert("업로드 성공!")
-        validationData_value= true;
+    document.getElementById('btn-submit').addEventListener('click', () => {
+        validationData();
+        
+        if(validationData_value){
+            uppy.upload();
+            document.getElementById('btn-submit').hidden=true;
+        }
+        
         setTimeout(function() {
-            submitform.submit();
-            }, 1500);
+            my_form.submit();
+            }, 3000);
+            return false;
+    }); 
+
+
+    document.getElementById("clothesInfo").onsubmit = function() {
+        return false;
     }
-}
+    // ===== form 유효성 테스트 =====
+    var validationData_value = false;
+    var submitform = document.getElementById("clothesInfo"); // form을 sumitform 변수에 저장
+
+    function validationData(){
+        const files = uppy.getFiles();
+        if($('#type1').val() == "" || $('#type1').val() == "none" || $('#type1').val() == null){ // input form이 비어있으면
+            alert("분류1을 선택하지 않았습니다."); 
+            validationData_value= false;
+        }else if($('#type2').val() == "" || $('#type2').val() == "none" || $('#type2').val() == null){ // input form이 비어있으면
+            alert("분류2을 선택하지 않았습니다."); 
+            validationData_value= false;
+        }else if($('#clothesName').val() == "" || $('#clothesName').val() == "none" || $('#clothesName').val() == null){ // input form이 비어있으면
+            alert("이름을 입력하지 않았습니다."); 
+            validationData_value= false;
+        }else{ // 사진이 있으면?
+            alert("수정 완료!")
+            validationData_value= true;
+            setTimeout(function() {
+                submitform.submit();
+                }, 1500);
+        }
+    }
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     function getType(){
-        var mainCategory = [ "상의", "하의","치마","원피스","아우터","가방","악세서리","신발"];
+        var mainCategory = {
+            "상의" : ["=== 분류 2 ===","니트/스웨터","셔츠/블라우스","후드 티셔츠", "피케/카라 티셔츠","맨투맨/스웨트셔츠", "반소매 티셔츠","긴소매 티셔츠","민소매 티셔츠","기타 상의"],
+            "하의" : ["=== 분류 2 ===","데님 팬츠","숏 팬츠","코튼 팬츠", "레깅스","슈트 팬츠/슬랙스","점프 슈트/오버올","트레이닝/조거 팬츠","기타 바지"],
+            "치마" : ["=== 분류 2 ===","미니 스커트", "미디 스커트","롱 스커트"],
+            "원피스" : ["=== 분류 2 ===","미니 원피스", "미디 원피스","맥시 원피스"],
+            "아우터" : ["=== 분류 2 ===","후드 집업","환절기 코트", "블루종/MA-1","겨울 코트", "레더/라이더스 재킷","무스탕/퍼","롱패딩/롱헤비 아우터","슈트/블레이저 재킷","숏패딩/숏헤비 아우터","카디건","아노락 재킷","패딩 베스트","플리스/뽀글이","트레이닝 재킷","기타 아우터"],
+            "가방" : ["=== 분류 2 ===","백팩","메신저/크로스 백","파우치 백","숄더백","에코백","토트백","클로치 백","웨이스트백/힙색"],
+            "악세서리" : ["=== 분류 2 ===","모자","레그웨어","머플러","장갑","시계","팔찌","귀걸이","반지","발찌","목걸이","헤어 액세서리"],
+            "신발" : ["=== 분류 2 ===","구두","샌들","로퍼","힐/펌프스","플랫 슈즈","부츠","캔버스/단화","스포츠 스니커즈"],
+        }
+
         var top = ["=== 분류 2 ===","니트/스웨터","셔츠/블라우스","후드 티셔츠", "피케/카라 티셔츠","맨투맨/스웨트셔츠", "반소매 티셔츠","긴소매 티셔츠","민소매 티셔츠","기타 상의"];
         var pants = ["=== 분류 2 ===","데님 팬츠","숏 팬츠","코튼 팬츠", "레깅스","슈트 팬츠/슬랙스","점프 슈트/오버올","트레이닝/조거 팬츠","기타 바지"];
         var skirt = ["=== 분류 2 ===","미니 스커트", "미디 스커트","롱 스커트"];
@@ -305,8 +312,9 @@ function validationData(){
     
         var selectedMain = "{{clothesobject.type1}}";
         var selectedsub = "{{clothesobject.type2}}"
-        var changeItem;
+        var changeItem = top;
 
+        console.log("main ",selectedMain,"/ sub",selectedsub);
 
         if(selectedMain == "상의"){
             changeItem = top;
@@ -360,14 +368,14 @@ function validationData(){
     function subChange(){
 
         var mainCategory = {
-            "top" : ["=== 분류 2 ===","니트/스웨터","셔츠/블라우스","후드 티셔츠", "피케/카라 티셔츠","맨투맨/스웨트셔츠", "반소매 티셔츠","긴소매 티셔츠","민소매 티셔츠","기타 상의"],
-            "pants" : ["=== 분류 2 ===","데님 팬츠","숏 팬츠","코튼 팬츠", "레깅스","슈트 팬츠/슬랙스","점프 슈트/오버올","트레이닝/조거 팬츠","기타 바지"],
-            "skirt" : ["=== 분류 2 ===","미니 스커트", "미디 스커트","롱 스커트"],
-            "dress" : ["=== 분류 2 ===","미니 원피스", "미디 원피스","맥시 원피스"],
-            "outer" : ["=== 분류 2 ===","후드 집업","환절기 코트", "블루종/MA-1","겨울 코트", "레더/라이더스 재킷","무스탕/퍼","롱패딩/롱헤비 아우터","슈트/블레이저 재킷","숏패딩/숏헤비 아우터","카디건","아노락 재킷","패딩 베스트","플리스/뽀글이","트레이닝 재킷","기타 아우터"],
-            "bag" : ["=== 분류 2 ===","백팩","메신저/크로스 백","파우치 백","숄더백","에코백","토트백","클로치 백","웨이스트백/힙색"],
-            "accessary" : ["=== 분류 2 ===","모자","레그웨어","머플러","장갑","시계","팔찌","귀걸이","반지","발찌","목걸이","헤어 액세서리"],
-            "shoes" : ["=== 분류 2 ===","구두","샌들","로퍼","힐/펌프스","플랫 슈즈","부츠","캔버스/단화","스포츠 스니커즈"],
+            "상의" : ["=== 분류 2 ===","니트/스웨터","셔츠/블라우스","후드 티셔츠", "피케/카라 티셔츠","맨투맨/스웨트셔츠", "반소매 티셔츠","긴소매 티셔츠","민소매 티셔츠","기타 상의"],
+            "하의" : ["=== 분류 2 ===","데님 팬츠","숏 팬츠","코튼 팬츠", "레깅스","슈트 팬츠/슬랙스","점프 슈트/오버올","트레이닝/조거 팬츠","기타 바지"],
+            "치마" : ["=== 분류 2 ===","미니 스커트", "미디 스커트","롱 스커트"],
+            "원피스" : ["=== 분류 2 ===","미니 원피스", "미디 원피스","맥시 원피스"],
+            "아우터" : ["=== 분류 2 ===","후드 집업","환절기 코트", "블루종/MA-1","겨울 코트", "레더/라이더스 재킷","무스탕/퍼","롱패딩/롱헤비 아우터","슈트/블레이저 재킷","숏패딩/숏헤비 아우터","카디건","아노락 재킷","패딩 베스트","플리스/뽀글이","트레이닝 재킷","기타 아우터"],
+            "가방" : ["=== 분류 2 ===","백팩","메신저/크로스 백","파우치 백","숄더백","에코백","토트백","클로치 백","웨이스트백/힙색"],
+            "악세서리" : ["=== 분류 2 ===","모자","레그웨어","머플러","장갑","시계","팔찌","귀걸이","반지","발찌","목걸이","헤어 액세서리"],
+            "신발" : ["=== 분류 2 ===","구두","샌들","로퍼","힐/펌프스","플랫 슈즈","부츠","캔버스/단화","스포츠 스니커즈"],
         }
 
         var selectItem = $("#type1").val();
@@ -380,20 +388,7 @@ function validationData(){
         
     }
 
-    function deleteTag(){
-        //var tag = document.getElementsByClassName('tag_delete');
-        var tags_list = document.getElementById('tags').value;
-        var delete_tag = this.previousSibling.textContent;
-        
-        if(tags_list.indexOf(',')!=-1){
-            tags_list = tags_list.replace(', '+delete_tag,'');
-        }else{
-            tags_list = '';
-        }
-        document.getElementById('tags').value = tags_list;
-        this.parentNode.remove();
     
-    }
 
     function getTag(){ //유효성 검사 + 엔터 누르면 tag label에 추가시키는 코드
         var valuelist = "{{clothesobject.tag}}";
@@ -467,21 +462,26 @@ function validationData(){
         }
     }
 
+    function deleteTag(){
+        var tags_list = document.getElementById('tags').value.split(",");
+        var delete_tag = this.previousSibling.textContent;
+        var delete_num = tags_list.indexOf(delete_tag)
+        
+        tags_list = tags_list.splice(delete_num-1,1)
+
+        document.getElementById('tags').value = tags_list.join(',');
+        this.parentNode.remove();
+    
+    }
+
     window.onload=function(){
         getType();
-        getTag()
+        getTag();
+        
 
         document.getElementById("type1").addEventListener("change", subChange);
         document.getElementById("btn_addtag").addEventListener("click", addTag);
-
     }
-    {% if photosobject %}
-        {% for photo in photosobject %}
-            console.log("{{photo.imgfile.url}}");
-            console.log("{{photo.imgfile.content_type}}");
-             
-        {% endfor %}    
-    {% endif %}
 </script>
 
 {% endblock jsv%}
