--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -64,15 +64,14 @@
                        
                     {% endblock nav %}
                     {% if user.is_authenticated %}
-                    <a href="{% url 'virtual_fit' user.first_name %}" class="nav-item nav-link jamsil">가상 피팅</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">Clothes</a>             
+                        <a href="#" class="nav-link dropdown-toggle jamsil" data-bs-toggle="dropdown">가상피팅</a>             
                         <div class="dropdown-menu m-0" style="top: 60px;">
-                            <a href="{% url 'view_closet' user.first_name %}" class="dropdown-item jamsil">My closet</a>
-                            <a href="{% url 'blog' user.first_name %}" class="dropdown-item jamsil">Codi book</a>
-                            <a href="{% url 'uploadCloset' user.first_name %}" class="dropdown-item jamsil">(Test)Upload</a>
+                            <a href="{% url 'virtual_fit' user.first_name %}" class="dropdown-item nav-link jamsil">가상 피팅</a>
                         </div>
                     </div>
+                    <a href="{% url 'view_closet' user.first_name %}" class="nav-item nav-link jamsil jamsil">내 옷장</a>
+                    <a href="{% url 'blog' user.first_name %}" class="nav-item nav-link jamsil jamsil">코디북</a>
                     <a href="{% url 'mypage' user.first_name %}" class="nav-item nav-link jamsil vis">마이페이지</a>  
                     <a href="{% url 'logout' %}" class="nav-item nav-link jamsil vis">로그아웃</a>    
                     {% else %}
